# LabelPrinterApp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
c-updater/: .gitignore  CMakeLists.txt  README.md  SECURITY.md  TODO.md
c-updater/.github/: FUNDING.yml
c-updater/include/labelprinterapp/update/: manager.hpp  updater.hpp
c-updater/include/labelprinterapp/update/detail/: common.h  downloader.h  github.h  launcher.h  log.h  operations.h  types.h  verifiers.h
c-updater/include/labelprinterapp/update/internal/: crypto.h  sentinel.h  types.h  util.h  zip.h
c-updater/include/labelprinterapp/update/internal/win/: lock.h  process.h  startmenu.h
c-updater/test/: common_test.cpp  integration_test.cpp  update_test.cpp  win_test.cpp
core/: AppUpdater.cpp  AppUpdater.h  AppVersion.h.in  BarcodeMetrics.h  ExcelImporter.cpp  ExcelImporter.h  ExcelRecordSet.h  LabelElement.h  LabelGeometry.h  LabelLayout.cpp  LabelLayout.h  LabelTemplate.h  LabelUnits.h  PrinterSettings.h  RecordRangeParser.cpp  RecordRangeParser.h  SampleData.h  TemplateStorage.cpp  VariableResolver.cpp  ZebraPrinter.cpp  ZebraPrinter.h  ZplGenerator.cpp  ZplGenerator.h
docs/: ARCHITECTURE.md  KNOWN_ISSUES.md  MANUAL_QA_CHECKLIST.md  PRINTER_CALIBRATION.md  RELEASE_PROCESS.md  ROADMAP.md  UI_REDESIGN.md  USER_GUIDE.md  example_generated.zpl
examples/: excel_records_sample.csv  sample_items.csv
include/LabelPrinterApp/: LabelElement.h  LabelTemplate.h  LabelValidation.h  PrintHistory.h  TemplateStorage.h  ZebraPrinter.h  ZplGenerator.h
launcher/: main.cpp
scripts/: build-and-test.ps1  package-release.ps1
src/: ZebraPrinter.cpp
src/ui/: MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h
templates/: asset_qr_label.json  barcode_test_2_25x0_75.json  database_test_2_25x0_75.json  database_test_4x2.json  default_label.json  inventory_label.json  mini_shipping_label.json  price_label.json  serial_test_2_25x0_75.json  serial_test_4x2.json  shelf_bin_label.json  shipping_test_4x2.json  test_label_4x2.json  work_center_dispatch_label.json
tests/: model_zpl_tests.cpp
ui/: ElementEditorWidget.cpp  ElementEditorWidget.h  ExcelRecordsWidget.cpp  ExcelRecordsWidget.h  ExcelTableModel.cpp  ExcelTableModel.h  LabelCoordinateMapper.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h
